Updated biome trait detection and processing